evaluation-service-main/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-deployment
  namespace: toggle
  labels:
    app: evaluation
spec:
  replicas: 3
  selector:
    matchLabels:
      app: evaluation
  template:
    metadata:
      labels:
        app: evaluation
    spec:
      containers:
        - name: evaluation-container
          image: 047719652987.dkr.ecr.us-east-1.amazonaws.com/tc-prod-ecr-evaluation:1cef0b13
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "40m"
          ports:
            - containerPort: 8004
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 10
